# FactGuard

./: .gitignore  README.md  docker-compose.yml
app/: next.config.mjs  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/auth/[...nextauth]/: route.tsx
app/app/api/signin/: route.tsx
app/app/api/signup/: route.tsx
app/app/component/Authprovider/: Authprovider.tsx
app/app/component/sidebar/: index.tsx
app/app/dashboard/: layout.tsx  page.tsx
app/app/dashboard/history/: page.tsx
app/app/signin/: page.tsx
app/app/signup/: page.tsx
apps/api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/factguard_api/: main.py
apps/api/factguard_api/core/: config.py  logging.py  ollama.py  progress.py  qdrant.py
apps/api/factguard_api/models/: schemas.py
apps/api/factguard_api/prompts/: templates.py
apps/api/factguard_api/routes/: analyze.py  jobs.py
apps/api/factguard_api/services/: agent.py  claims.py  eval.py  frames.py  pipeline.py  rag.py  score.py  search.py  synthesize.py  transcript.py  upload.py  verify.py  youtube.py
apps/api/factguard_api/store/: jobs.py
apps/web/: .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/analyze/: page.tsx
apps/web/src/lib/: api-client.ts  sources.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: api.ts
server/: input.txt  readme.md  requirements.txt  test.ipynb  test.txt
server/api/: index.py
(+15 files in other folders)
