[project]
name = "factguard-api"
version = "0.1.0"
description = "FactGuard FastAPI service: video fact-check pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "yt-dlp>=2024.10.7",
    "youtube-transcript-api>=0.6.2",
    "faster-whisper>=1.0.3",
    "tavily-python>=0.5.0",
    "ragas>=0.2.0; python_version<'3.13'",
    "datasets>=2.20.0; python_version<'3.13'",
    "langchain-community>=0.3.0; python_version<'3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["factguard_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"
